[gd_scene load_steps=45 format=2]

[ext_resource path="res://Recursos/Montserrat-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Montserrat-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Recursos/IconoMenuDesplegable9.png" type="Texture" id=3]
[ext_resource path="res://Pantallas/DocenteHorarios.gd" type="Script" id=4]
[ext_resource path="res://Recursos/Montserrat-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 1, 0.945098, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.196078, 0.211765, 0.980392, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 1, 0.945098, 0.909804, 1 )
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 2
border_color = Color( 0.254902, 0.223529, 0.223529, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=43]
bg_color = Color( 1, 0.945098, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Recursos/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Recursos/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Recursos/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Recursos/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=13]
font_data = SubResource( 12 )

[sub_resource type="Animation" id=33]
resource_name = "despliegue_menu_lateral"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PanelLateral:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -260, 76 ), Vector2( 0, 76 ) ]
}

[sub_resource type="Animation" id=34]
resource_name = "repliegue_menu_lateral"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PanelLateral:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.01, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 76 ), Vector2( -260, 76 ) ]
}

[sub_resource type="StyleBoxFlat" id=47]
bg_color = Color( 0.184314, 0.823529, 1, 1 )

[sub_resource type="DynamicFont" id=36]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.184314, 0.823529, 1, 1 )

[sub_resource type="DynamicFont" id=44]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=45]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=48]
bg_color = Color( 0.184314, 0.823529, 1, 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="DynamicFont" id=23]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 3
border_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 3
border_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="DynamicFont" id=24]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.670588, 0.121569, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.670588, 0.121569, 0.121569, 1 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 3
border_color = Color( 0.968627, 0.160784, 0.160784, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.827451, 0.141176, 0.141176, 1 )

[node name="DocenteHorarios" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.823529, 1, 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="ButtonMenuDesplegable" type="Button" parent="Panel"]
anchor_left = 0.0104167
anchor_top = 0.0394737
anchor_right = 0.05
anchor_bottom = 0.960526
custom_styles/hover = SubResource( 41 )
custom_styles/pressed = SubResource( 42 )
custom_styles/normal = SubResource( 43 )
icon = ExtResource( 3 )
icon_align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = 2.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -38.0
margin_right = 960.0
margin_bottom = 38.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Educar para Transformar"
align = 1
valign = 1

[node name="PanelHorario" type="Panel" parent="."]
visible = false
anchor_left = 0.068
anchor_top = 0.127
anchor_right = 0.938
anchor_bottom = 1.0
margin_left = 62.44
margin_top = 34.84
margin_right = -73.9601
margin_bottom = -41.0
custom_styles/panel = SubResource( 46 )

[node name="HSeparator2" type="HSeparator" parent="PanelHorario"]
anchor_left = 0.0875421
anchor_top = 0.0763359
anchor_right = 0.925926
anchor_bottom = 0.0839695
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator3" type="HSeparator" parent="PanelHorario"]
anchor_left = 0.0875421
anchor_top = 0.152672
anchor_right = 0.925926
anchor_bottom = 0.160305
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator4" type="HSeparator" parent="PanelHorario"]
anchor_left = 0.0875421
anchor_top = 0.917939
anchor_right = 0.925926
anchor_bottom = 0.925573
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Año" type="Label" parent="PanelHorario"]
anchor_left = 0.0875421
anchor_top = 0.0782443
anchor_right = 0.200898
anchor_bottom = 0.15458
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Año"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Materia" type="Label" parent="PanelHorario"]
anchor_left = 0.201434
anchor_top = 0.0784314
anchor_right = 0.383312
anchor_bottom = 0.154556
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Materia"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Comision" type="Label" parent="PanelHorario"]
anchor_left = 0.384615
anchor_top = 0.0784314
anchor_right = 0.540417
anchor_bottom = 0.154556
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Comision"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Horario" type="Label" parent="PanelHorario"]
anchor_left = 0.726858
anchor_top = 0.0784314
anchor_right = 0.925033
anchor_bottom = 0.154556
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Horario"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Aula" type="Label" parent="PanelHorario"]
anchor_left = 0.540417
anchor_top = 0.0784314
anchor_right = 0.726858
anchor_bottom = 0.154556
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Aula"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator" type="VSeparator" parent="PanelHorario"]
anchor_left = 0.0864198
anchor_top = 0.0782443
anchor_right = 0.0909091
anchor_bottom = 0.921756
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator3" type="VSeparator" parent="PanelHorario"]
anchor_left = 0.200898
anchor_top = 0.0782443
anchor_right = 0.205387
anchor_bottom = 0.919847
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator5" type="VSeparator" parent="PanelHorario"]
anchor_left = 0.538462
anchor_top = 0.0784314
anchor_right = 0.54295
anchor_bottom = 0.918126
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator4" type="VSeparator" parent="PanelHorario"]
anchor_left = 0.382008
anchor_top = 0.0784314
anchor_right = 0.386497
anchor_bottom = 0.920035
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator6" type="VSeparator" parent="PanelHorario"]
anchor_left = 0.724902
anchor_top = 0.0784314
anchor_right = 0.729391
anchor_bottom = 0.920035
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator2" type="VSeparator" parent="PanelHorario"]
anchor_left = 0.923681
anchor_top = 0.0782443
anchor_right = 0.928171
anchor_bottom = 0.921756
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Materias" type="Control" parent="PanelHorario"]
anchor_left = -0.078
anchor_top = -0.145
anchor_right = 1.071
anchor_bottom = 1.0
margin_left = -0.699432
margin_top = -0.114182
margin_right = -0.127075
margin_bottom = -1.04004

[node name="Mat" type="Control" parent="PanelHorario/Materias"]
anchor_left = 0.152002
anchor_top = 0.274252
anchor_right = 0.9381
anchor_bottom = 0.314583
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="PanelHorario/Materias/Mat"]
anchor_right = 0.111833
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Null"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="PanelHorario/Materias/Mat"]
anchor_left = 0.122655
anchor_right = 0.31241
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Null"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label3" type="Label" parent="PanelHorario/Materias/Mat"]
anchor_left = 0.324675
anchor_right = 0.486291
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Null"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label4" type="Label" parent="PanelHorario/Materias/Mat"]
anchor_left = 0.497114
anchor_right = 0.691919
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Null"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label5" type="Label" parent="PanelHorario/Materias/Mat"]
anchor_left = 0.701299
anchor_right = 0.911977
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Null"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/despliegue_menu_lateral = SubResource( 33 )
anims/repliegue_menu_lateral = SubResource( 34 )

[node name="PanelBienvenida" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 47 )

[node name="LabelBienvenida" type="Label" parent="PanelBienvenida"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -49.0
margin_right = 260.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 36 )
text = "Bienvenido, @Nombre @Apellido"
align = 1
valign = 1

[node name="PanelMaterias" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 35 )

[node name="LabelMaterias" type="Label" parent="PanelMaterias"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -220.0
margin_right = 260.0
margin_bottom = -182.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 36 )
text = "Seleccione una materia"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="PanelMaterias"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.5
margin_top = -170.0
margin_right = 180.5
margin_bottom = -130.0

[node name="MenuButton" type="MenuButton" parent="PanelMaterias/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 44 )
custom_styles/normal = SubResource( 45 )
text = "Seleccionar"
items = [ "Materia 1", null, 0, false, false, 0, 0, null, "", false, "Materia 2", null, 0, false, false, 1, 0, null, "", false ]

[node name="PanelNotas" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 316.0
margin_right = -449.0
margin_bottom = -240.0
custom_styles/panel = SubResource( 48 )

[node name="LabelNotas" type="Label" parent="PanelNotas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -49.0
margin_right = 260.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 36 )
text = "Aca van a estar las notas"
align = 1
valign = 1

[node name="PanelLateral" type="Panel" parent="."]
anchor_right = 0.132
anchor_bottom = 1.0
margin_left = -251.333
margin_top = 76.0
margin_right = -250.773
custom_styles/panel = SubResource( 29 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelLateral"]
anchor_right = 0.988
anchor_bottom = 1.0
margin_left = 4.0
margin_right = 0.0479889
margin_bottom = -222.0
custom_constants/separation = 5

[node name="ButtonHorarios" type="Button" parent="PanelLateral/VBoxContainer"]
margin_right = 246.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 37 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 30 )
text = " Horarios"
align = 0

[node name="ButtonNotas" type="Button" parent="PanelLateral/VBoxContainer"]
margin_top = 45.0
margin_right = 246.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 31 )
text = " Cargar notas"
align = 0

[node name="ButtonMaterias" type="Button" parent="PanelLateral/VBoxContainer"]
margin_top = 90.0
margin_right = 246.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.996078, 0.996078, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 39 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 32 )
text = " Materias"
align = 0

[node name="HSeparator" type="HSeparator" parent="PanelLateral/VBoxContainer"]
margin_top = 135.0
margin_right = 246.0
margin_bottom = 139.0

[node name="ButtonSalir" type="Button" parent="PanelLateral/VBoxContainer"]
margin_top = 144.0
margin_right = 246.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 40 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 14 )
text = "Salir"

[connection signal="pressed" from="Panel/ButtonMenuDesplegable" to="." method="_on_ButtonMenuDesplegable_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonHorarios" to="." method="_on_ButtonHorarios_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonNotas" to="." method="_on_ButtonNotas_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonMaterias" to="." method="_on_ButtonMaterias_pressed"]
